--- a/css/base.styl
+++ b/css/base.styl
@@ -217,6 +217,10 @@ html
   &, .image, .meta
     box-sizing: border-box
 
+  .meta
+    max-height: 100%
+    overflow: hidden
+
   // Invisible link
   a.link
     display: block
